# webserial

./: .gitignore  README.md  pyproject.toml
webserial/: __init__.py  __main__.py  calibredb.py  cli.py  config.py  errors.py  fff.py  update.py  utils.py
