[tool.poetry]
name = "webserial"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
readme = "README.md"

[tool.poetry.scripts]
webserial = "webserial.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
typer = "^0.3.2"
toml = "^0.10.2"
FanFicFare = "^4.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
